--- a/My_Stories_for_You/index.qmd
+++ b/My_Stories_for_You/index.qmd
@@ -1,12 +1,19 @@
 # UTS-3 My Stories for You
+## Learning to Take it Easy
+![Sedikit Bercerita](../images/esa2.jpg){width=950%}
 
-A story about my oldest daughter [Gaun Pemngantin Gladys](<https://azrl.wordpress.com/2020/07/18/gaun-pengantin-gladys/#comment-28004>)
+Semester tiga menjadi salah satu masa yang paling menantang bagi saya.
+Saat itu, saya mulai menyadari bahwa jurusan yang saya ambil tidak sepenuhnya sejalan dengan minat saya. Tugas-tugas terasa tidak ada habisnya, tenggat waktu datang silih berganti, dan saya belum mampu mengatur waktu dengan baik. Setiap hari dipenuhi rasa lelah dan tekanan yang terus menumpuk. Dalam hati, saya sempat berpikir untuk berhenti kuliah, karena merasa tidak sanggup melanjutkan hal yang tidak saya nikmati.
 
-A message to my daughter [The Child Who Learned to Walk at the Disneyland](<https://azrl.wordpress.com/2021/10/06/the-child-who-learned-to-walk-at-the-disneyland/>)
+Di masa itu, saya banyak diam. Sesekali saya bercerita kepada teman-teman, tetapi kebanyakan waktu saya habiskan untuk mencoba menenangkan diri. Rutinitas berjalan begitu saja, tanpa arah yang jelas. Saya merasa kehilangan kendali atas hal-hal kecil sekalipun, dan perlahan mulai meragukan diri sendiri.
 
-A story for my students [Fly Eagle Fly](<https://azrl.wordpress.com/2008/04/21/fly-my-eagle-fly/>)
+Namun titik balik datang ketika memasuki semester empat. Semester itu dikenal sebagai salah satu yang paling padat dan menegangkan di jurusan saya. Anehnya, justru di situ saya mulai bisa bertahan dengan lebih baik. Saya memaksa diri untuk lebih disiplin, belajar mengatur waktu, dan berusaha menghadapi setiap hari dengan langkah yang lebih tenang. Tidak semuanya berjalan mulus, tetapi setiap kemajuan kecil terasa berarti.
 
-A (true) story for my teachers [Sang Mahaguru, Sang Mahaputera](<https://azrl.wordpress.com/2012/11/28/perginya-sang-mahaputera-dan-mahaguru-berkemeja-putih/)
+Saya juga beruntung memiliki orang-orang di sekitar yang selalu hadir, teman-teman yang mau mendengarkan, memberi semangat, atau sekadar menemani saat hari terasa berat. Dukungan kecil dari mereka membantu saya melihat bahwa saya tidak sendiri, dan bahwa perjalanan ini tidak harus dijalani dengan tergesa-gesa.
 
-Teasing story
-{{< video https://www.youtube.com/watch?v=Dg_4PbBlBf4 >}}
+Kini di semester lima, saya belajar untuk menghadapi segalanya dengan lebih tenang. Tekanan tetap ada, tetapi cara pandang saya sudah berbeda. Saya tidak lagi menuntut kesempurnaan dari diri sendiri, melainkan berusaha menjalani proses dengan lebih sabar. Saya mulai percaya bahwa tidak apa-apa jika belum sepenuhnya mengerti arah yang ingin dituju. Yang penting adalah tetap melangkah, perlahan tapi pasti.
+
+Jika saya bisa berbicara pada diri saya di semester tiga, saya akan berkata:
+“Teruslah berjalan. Tidak apa-apa jika hari ini belum sekuat yang kamu harapkan. Progres sekecil apa pun tetap berarti. Dunia memang tidak akan berhenti untuk menunggu, tetapi kamu juga tidak harus berlari. Tenangkan diri, dan percayalah bahwa semuanya akan menemukan tempatnya pada waktunya.”
+
+Mungkin di situlah saya benar-benar memahami makna dari Easy. Hidup tidak selalu mudah, tetapi kita bisa belajar menjalaninya dengan lebih ringan. Tidak semua hal harus diselesaikan sekaligus. Kadang, cukup bernapas, bersyukur, dan melangkah perlahan sudah lebih dari cukup.
