--- a/index.qmd
+++ b/index.qmd
@@ -1,22 +1,14 @@
 # Selamat Berjumpa {.unnumbered}
 
-![About Me](images/AZRL.png){width=950%}
+![About Me](images/esa.jpg){width=950%}
 
-Armein Z R Langi adalah Guru Besar di Sekolah Teknik Elektro dan Informatika ITB, dosen ITB sejak Desember 1987, mantan Rektor Universitas Kristen Maranatha, 1 Maret 2016 s/d 29 Februari 2020, mantan Kepala Pusat Penelitian Teknologi Informasi dan Komunikasi (PP-TIK) ITB November 2005 s/d Maret 2010, dan Sekretaris MWA ITB Mei 2010-Jan 2011.
+Halo, saya Mahesa Fadhillah Andre, mahasiswa Teknik Informatika ITB angkatan 2023.
+Saat ini saya sedang menjalani keseharian sebagai mahasiswa yang cukup padat, antara kuliah, proyek, dan kegiatan organisasi di kampus.
 
-Lahir di Tomohon 1962 dari pasangan Manado dan Sunda. Saat ini tinggal di Bandung, menikah dengan Ina dan dikaruniai empat anak. Ayah dari Gladys, Kezia, Andria, dan Marco.
+Saya lahir pada 2 Agustus 2005 di Jakarta, dibesarkan di Jakarta hingga akhir SMA. Saya adalah anak pertama dari dua bersaudara.
 
-Sharing pikiran singkat ada di blog <https://azrl.wordpress.com>. Facebookk: armein_langi
+Saya tertarik pada hal-hal yang berhubungan dengan teknologi, desain, dan pengembangan aplikasi. Saya suka membuat sesuatu yang bisa berfungsi dan punya nilai nyata, baik untuk diri sendiri maupun orang lain.
 
-Andria, putri saya, lumayan sering membaca blog ini.  Dia juga sumber inspirasi tulisan saya.  Dia senang menceritakan jokes pada saya, dan kalau bagus saya tulis di sini, terutama seri Kocak Ala Andria.  Dan dia suka heran, karena isinya sudah berbeda.  Memang saya senang mengubah-ngubah cerita karena saya tidak suka menjiplak mentah-mentah.  Minggu lalu tidak sengaja dia memuji tulisan blog ini.
+Di luar itu, saya juga senang berolahraga seperti tenis, calisthenics, dan lari, karena menurut saya penting untuk menjaga keseimbangan antara aktivitas fisik dan kegiatan akademik.
 
-
-“Papa… papa… “, tanyanya, “Tulisan blog papa itu copy-paste dari tulisan orang ya…?”
-
-Haa? Ya nggak mungkin lah.  Kecuali lirik lagu, semua artikel di sini ditulis sendiri.
-
-“Ah bohong, soalnya tulisannya terlalu banyak….” katanya tetap tidak percaya, “Nggak mungkinlah papa tulis sendiri…”
-
-Hehe, saya tersenyum sambil membelai Andria, karena buat saya itu adalah ultimate compliment.  Thanks sweetheart…
-
-Jadi kalau orang tidak percaya bahwa sesuatu itu karya anda, anda yang buat, jangan marah.  Itu adalah pujian yang sejati.
+Saya orang yang cukup penasaran dan suka belajar hal baru. Kadang terlalu fokus sampai lupa waktu, kadang juga susah konsentrasi kalau banyak hal menarik di sekitar. Tapi lewat proses itu, saya merasa terus berkembang dan menemukan arah yang lebih jelas tentang siapa saya dan apa yang ingin saya capai.
