--- a/My_Song_for_You/index.qmd
+++ b/My_Song_for_You/index.qmd
@@ -1,160 +1,105 @@
 # UTS-2 My Songs for You
 
-Post Wedding Kawah Putih
-Lirik by Armein Z. R. Langi
-Music: SUNO
+Easy (like Sunday Morning)
+{{< video https://youtu.be/saaLW0jiiUE?si=rwqHf-eN2Grr-VAM >}}, with lyrics
 
-{{< video https://youtu.be/KWthEImJ9mY?si=iUV8Ghhj0R3gKQyZ>}}, with lyrics
+Easy
 
-Engkau
-[Intro]
-[verse1]
-Mereka bilang perlu Ribuan kata 
-untuk menyatakan cinta. 
-Tapi satu-satunya kata yang kutemukan
- adalah: engkau…
+[Verse 1]
+Know it sounds funny
+But I just can't stand the pain
+Girl, I'm leaving you tomorrow
+Seems to me, girl
+You know I've done all I can
+You see, I begged, stole, and I borrowed, yeah, ooh
+
+[Chorus]
+That's why I'm easy
+I'm easy like Sunday morning
+That's why I'm easy
+I'm easy like Sunday morning
 
 [Verse 2]
-Hidup bergerak begitu deras 
-Siang malam datang dan pergi. 
-Mereka bilang semua itu 
-akan melunturkan cinta kita…
+Why in the world would anybody put chains on me, yeah?
+I've paid my dues to make it
+Everybody wants me to be
+What they want me to be
+I'm not happy when I try to fake it, no, ooh
 
+[Chorus]
+That's why I'm easy (yeah)
+I'm easy like Sunday morning, yeah
+That's why I'm easy
+I'm easy like Sunday morning
 
-[Chorus 1]
-Tetapi engkau masih di sini, 
-dengan tatapan cinta. 
-Engkau selalu di sini 
-dengan hati penuh kasih. 
+[Bridge]
+I wanna be high, so high
+I wanna be free to know the things I do are right
+I wanna be free
+Just me, oh babe
+Ooh
 
-[Chorus 2]
-Tahun demi tahun berlalu
-Cintamu menjadikan semua ini 
-begitu indah, Begitu bermakna. 
-Begitu menggairahkan.
+[Chorus/Outro]
+That's why I'm easy
+I'm easy like Sunday morning, yeah
+That's why I'm easy
+I'm easy like Sunday morning, woah
+'Cause I'm easy, woo
+Easy like Sunday morning, yeah
+'Cause I'm easy
+Easy like Sunday morning, whoa
 
-[Verse4]
-Peristiwa menimpa seperti badai tercurah dari langit. 
-Menerjang seperti seretan sungai. 
-Melemparku ke dalam dan ke luar, ke atas dan ke bawah, 
-menghanyutkanku gelagapan ke samudera raya…
+---
 
-[Chorus 1]
-Tetapi engkau masih di sini, 
-dengan tatapan cinta. 
-Engkau selalu di sini 
-dengan hati penuh kasih. 
+Heavy
+{{< video https://youtu.be/1BCqCgamowo?si=8aeQFa16PlxKPm7R >}}, with lyrics
 
-[Chorus 2]
-Tahun demi tahun berlalu
-Cintamu menjadikan semua ini 
-begitu indah, Begitu bermakna. 
-Begitu menggairahkan.
+Heavy
 
-[Coda 1]
-Sadarkah engkau 
-bahwa engkau telah menemukan 
-hukum baru tentang cinta? 
+[Verse 1]
+I'm heavy
+I'm by your side
+Forget me
+'Cause I know what I need
+Like a loser like me could be fine
+I'm heavy
+Alone inside
+Don't tell me what I want, what I need
+Like a loser like me will be fine
 
-[Coda 2]
-Bahwa satu tambah satu sama dengan satu
-Satu kali satu adalah tak hingga? 
-Dua kurang satu sama dengan kosong. 
-Segala sesuatu tanpa engkau adalah tiada…?
+[Pre-Chorus]
+Maybe I'm living in my head
+Maybe I'm living to pretend
+Maybe I wanna stay in bed
+Far from the weight of the world in my hands
+'Cause they don't understand
 
-[Chorus 1]
-Tetapi engkau masih di sini, 
-dengan tatapan cinta. 
-Engkau selalu di sini 
-dengan hati penuh kasih. 
+[Chorus]
+Is someone telling me don't get in the water?
+What have I done?
+I don't wanna get lost inside the color under my tongue
+'Cause I don't wanna be in love with another
+Even in another life
+Can someone tell me it's alright to be covered
+Underneath the covers? But I
 
-[Chorus 2]
-Tahun demi tahun berlalu
-Cintamu menjadikan semua ini 
-begitu indah, Begitu bermakna. 
-Begitu menggairahkan.
+[Verse 2]
+No, I don't need to sleep anymore
+Is someone banging at my door?
+When I just wanna be alone?
+Is someone banging at my door?
+Je ne sais pas qui est ici
+
+[Bridge]
+Is someone banging at my door
+When I just wanna be alone
+Is someone banging at my door, door, door, door?
+
 [Outro]
-
-
-Why am I singing for you? [River on my Mind](./Rivers%20In%20My%20Mind.mp3)
-, with lyrics
-
-River on my mind
-[Verse]
-I do not know what has happened with your life
-I do not know how much you have suffered
-What I know is how to be me
-And I am still learning
-
-[Chorus]
-I hope you find my song beautifully caring for you
-I hope you find my song beautifully caring for you
-
-[Verse]
-You deserve a caring heart
-And all of the most beautiful parts of this world
-You deserve a gentle touch
-And a soft place to land when you fall
-
-[Chorus]
-I hope you find my song beautifully caring for you
-I hope you find my song beautifully caring for you
-
-[Bridge]
-I hope you find my song beautifully caring for you
-I hope you find my song beautifully caring for you
-I hope you find my song beautifully caring for you
-I hope you find my song beautifully caring for you
-
-
-Falling in love everyday [Heaven on Earth](./Heaven%20on%20Earth.mp3), with lyrics
-
-Heaven on Earth
-[Verse]
-The breeze whispers soft to the sea
-A rhythm flows like it’s meant to be
-Every step feels lighter
-Free
-
-
-[Verse 2]
-The sunlight dances on your skin
-Every moment a new song begins
-Even the stars seem to lean in
-fresh
-
-[Chorus]
-Fall in love
-Fall in love
-Every day
-Let your heart find a brand-new way
-Heaven's here
-It’s not far above
-Life is beautiful when you love
-
-[Verse 2]
-The sunlight dances on your skin
-Every moment a new song begins
-Even the stars seem to lean in
-
-[Prechorus]
-Close your eyes
-Let it start
-Feel the world inside your heart
-
-[Chorus]
-Fall in love
-Fall in love
-Every day
-Let your heart find a brand-new way
-Heaven's here
-It’s not far above
-Life is beautiful when you love
-
-[Bridge]
-Catch the rain as it falls on your face
-Hear the laughter
-It fills every space
-Time is fleeting
-Don’t let it erase
-This heaven we chase
+Door, door, door, door, at my door
+Is someone banging at my door?
+'Cause I just wanna be alone
+Yeah, I just wanna be alone
+(I just wanna be alone)
+(Yeah, I just wanna be alone)
+(I just wanna be alone)
